--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,24 +1,14 @@
 sp-theme {
-    display: grid;
-    /* margin: 0 var(--spectrum-global-dimension-size-200);
-    display: flex;
-    flex-direction: column; */
+    display: grid;        
 }
-
-/* .container {
-    margin: 24px;
-    display: flex;
-    flex-direction: column;
-    
-} */
 
 h2 {
     font-weight: var(--spectrum-global-font-weight-black);
 }
 
-/* sp-swatch {
+sp-swatch {
     width: var(--spectrum-swatch-size-medium);                
-} */
+}
 
 sp-button {
     flex: 1;
@@ -45,7 +35,7 @@ sp-button-group {
 }
 
 sp-slider {
-    width: --spectrum-global-dimension-static-size-3200;
+    width: var(--spectrum-global-dimension-static-size-2800);
     --spectrum-slider-font-size: var(--spectrum-font-size-100);    
 } 
 
@@ -53,15 +43,10 @@ sp-field-label {
    font-size: var(--spectrum-global-dimension-font-size-100);   
 }
 
-input {
-    display: none;
-}
-
 .color-well {
     cursor: pointer;
     --mod-swatch-border-thickness: var(--spectrum-divider-thickness-small);
-    --mod-swatch-border-color: var(--spectrum-transparent-black-500);
-    
+    --mod-swatch-border-color: var(--spectrum-transparent-black-500);   
 }
 
 .row {
@@ -83,4 +68,8 @@ input {
 
 .margin-top-10 {
     margin-top: var(--spectrum-global-dimension-static-size-125); 
+}
+
+#bingoCanvas {
+    width: 290px;
 }
